--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.1.2",
     "react-scripts": "5.0.1",
+    "react-snap-carousel": "^0.5.1",
     "react-youtube": "^10.1.0"
   },
   "scripts": {
